--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <img src="https://ae-pic-a1.aliexpress-media.com/kf/S11f314cb66f240c3a47f820fe9aa962eH.jpg_220x220q75.jpg_.avif" alt="Automatic Cat Teasing Stick" class="product-img"/>
     <p class="price">$26.99 <small>(Free shipping USA/Canada)</small></p>
     <ul class="features">
-      <li>Automatic rotating feather toy</li>
-      <li>Rechargeable & low noise</li>
+      <li>Easy to use</li>
+      <li>Compact size</li>
       <li>Easy to clean and safe for pets</li>
       <li>Great for indoor play and stress relief</li>
     </ul>
@@ -48,3 +48,4 @@
   </footer>
 </body>
 </html>
+
